--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
   <center>在2020CNY到来之际，全国OIer一同庆祝CCF恢复NOIP！</center>
-    <iframe frameborder=1 width=100% height=800px marginheight=0 marginwidth=0 scrolling=yes src=http://www.noi.cn/newsview.html?id=1172&hash=AC7D99></iframe>
+    <iframe frameborder=1 width=100% height=800px marginheight=0 marginwidth=0 scrolling=yes src=http://www.noi.cn/newsview.html?id=1172&hash=AC7D99&type=1></iframe>
   </body>
 </html>
